--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>访问限制</title>
+    <link rel="icon" href="favicon.svg">
     <style>
         body {
             font-family: Arial, sans-serif;
